# loss-per-line

./: .gitignore  README.md  cabal.project.freeze  default.nix  loss-per-line.cabal  nixpkgs.nix  shell.nix
.github/workflows/: ci.yml  release.yml
app/: Main.hs
src/: Lib.hs
